@@ -70,7 +70,6 @@ test.NumericVector.matrix.indexing <- function(){
 	
 	funx <- cfunction(signature(x = "numeric" ), '
 		NumericVector m(x) ;
-		double trace = 0.0 ;
 		for( size_t i=0 ; i<4; i++){
 			m(i,i) = 2.0 * i ;
 		}
