@@ -80,15 +80,20 @@ CharacterVector::StringProxy& CharacterVector::StringProxy::operator=( const std
 
 
 const CharacterVector::StringProxy CharacterVector::operator[](int i) const throw(index_out_of_bounds){
-	if( i<0 || i>=length()) throw index_out_of_bounds() ;
-	return StringProxy(const_cast<CharacterVector&>(*this), i) ;
+	return StringProxy(const_cast<CharacterVector&>(*this), offset(i) ) ;
 }
 
 CharacterVector::StringProxy CharacterVector::operator[](int i) throw(index_out_of_bounds) {
-	if( i<0 || i>=length()) throw index_out_of_bounds() ;
-	return StringProxy(*this, i ) ;
+	return StringProxy(*this, offset(i) ) ;
 }
 
+CharacterVector::StringProxy CharacterVector::operator()( const size_t& i) throw(index_out_of_bounds){
+	return StringProxy(*this, offset(i) ) ;
+}
+
+CharacterVector::StringProxy CharacterVector::operator()( const size_t& i, const size_t&j ) throw(index_out_of_bounds,not_a_matrix){
+	return StringProxy(*this, offset(i,j) ) ;
+}
 
 
 } // namespace 
